--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=6565
 spring.application.name=E-library
 spring.datasource.url=jdbc:postgresql://localhost:5432/library_db
 spring.datasource.password=root
@@ -10,11 +11,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 # Swagger/OpenAPI Configuration
-springdoc.api-docs.path=/api-docs
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
 
 # IMPORTANT: Update this to match your actual package structure
 springdoc.packages-to-scan=Ziaat.E_library
@@ -28,3 +30,17 @@ minio.secret-key=Zi@@t@2025
 minio.bucket.cover=books-cover
 minio.bucket.attachment=books-attachment
 
+
+
+# JWT Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://testgateway.ziaatsmz.go.tz
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
+
+# Gateway Configuration
+gateway.url=https://testgateway.ziaatsmz.go.tz/
+gateway.auth.login=${gateway.url}/usermanagement-service/api/login
+gateway.auth.verify=${gateway.url}/usermanagement-service/api/verify
+
+# Logging (Optional)
+logging.level.org.springframework.security=DEBUG
+logging.level.com.elibrary=DEBUG
