docker cros orrign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://testgateway.ziaatsm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
 
 # Gateway Configuration
-gateway.url=https://testgateway.ziaatsmz.go.tz/
+gateway.url=http://testgateway.ziaatsmz.go.tz/
 gateway.auth.login=${gateway.url}/usermanagement-service/api/login
 gateway.auth.verify=${gateway.url}/usermanagement-service/api/verify
 
