docker cros orrign

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ minio.bucket.attachment=books-attachment
 
 
 # JWT Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://testgateway.ziaatsmz.go.tz
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://testgateway.ziaatsmz.go.tz
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
 
 # Gateway Configuration
 gateway.url=http://testgateway.ziaatsmz.go.tz/
