--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,11 @@ minio.bucket.attachment=books-attachment
 
 
 # JWT Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://testgateway.ziaatsmz.go.tz
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://testgateway.ziaatsmz.go.tz
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://testgateway.ziaatsmz.go.tz/.well-known/jwks.json
 
 # Gateway Configuration
-gateway.url=http://testgateway.ziaatsmz.go.tz/
+gateway.url=https://testgateway.ziaatsmz.go.tz/
 gateway.auth.login=${gateway.url}/usermanagement-service/api/login
 gateway.auth.verify=${gateway.url}/usermanagement-service/api/verify
 
