--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: "3.7"
-
 services:
   library:
     image: library-api:latest
@@ -8,11 +7,14 @@ services:
     restart: always
     ports:
       - 6565:6565
+    extra_hosts:
+      - "minio.external:102.214.44.250"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://psmis-db:5440/library_db
       SPRING_DATASOURCE_USERNAME: psmis
       SPRING_DATASOURCE_PASSWORD: psmisDb@2025
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
 
       GATEWAY_URL: "http://user-management:6060"
       GATEWAY_AUTH_LOGIN: "http://user-management:6060/api/login"
@@ -23,6 +25,7 @@ services:
       MINIO_SECRET_KEY: "Zi@@t@2025"
       MINIO_BUCKET_COVER: "books-cover"
       MINIO_BUCKET_ATTACHMENT: "books-attachment"
+
     networks:
       - ziaat_default
 
