--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,13 @@ services:
       GATEWAY_URL: "http://user-management:6060"
       GATEWAY_AUTH_LOGIN: "http://user-management:6060/api/login"
       GATEWAY_AUTH_VERIFY: "http://user-management:6060/api/auth/verify"
+
+      MINIO_URL: "http://minio2:9005"
+      MINIO_ACCESS_KEY: "admin"
+      MINIO_SECRET_KEY: "Zi@@t@2025"
+      MINIO_BUCKET_COVER: "books-cover"
+      MINIO_BUCKET_ATTACHMENT: "books-attachment"
+
     networks:
       - ziaat_default
 
