--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,14 @@ minio.secret-key=Zi@@t@2025
 minio.bucket.cover=books-cover
 minio.bucket.attachment=books-attachment
 
+# Maximum file size (default is 1MB)
+spring.servlet.multipart.max-file-size=100MB
 
+# Maximum request size (default is 10MB)
+spring.servlet.multipart.max-request-size=100MB
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
 
 # JWT Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://testgateway.ziaatsmz.go.tz
