--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@
 #
 #
 
+
 version: "3.7"
 services:
   library:
@@ -91,12 +92,8 @@ services:
 
       SPRING_MVC_ASYNC_REQUEST_TIMEOUT: "300000"
 
-#    deploy:
-#      resources:
-#        limits:
-#          memory: 2G
-#        reservations:
-#          memory: 1G
+    networks:
+      - ziaat_default
 
 networks:
   ziaat_default:
